src/index.css
@import "tailwindcss";

@theme {
    --color-bear: #4f352c;
    --color-bear-light: #6c4a3e;
    --color-elk: #bb9956;
    --color-elk-light: #d3b270;
    --color-fox: #ca712f;
    --color-fox-light: #e08742;
    --color-hawk: #97b2c7;
    --color-hawk-light: #aec6d7;
    --color-salmon: #c14352;
    --color-salmon-light: #d65a69;
    --color-nature: #b1c7a6;
    --color-nature-light: #c3d3bb;
}

body {
    background-color: #785748;
}

